[package]
name = "worthc"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "worthc"
path = "src/main.rs"

[[bin]]
name = "worth-fmt"
path = "src/fmt.rs"

[dependencies]
anyhow = "1.0.68"
casey = "0.3.3"
clap = { version = "4.0.32", features = ["derive"] }
dialoguer = "0.10.2"
nom = "7.1.2"
nom_locate = "4.0.0"
snailquote = "0.3.1"
thiserror = "1.0.38"
walkdir = "2.3.2"

[dev-dependencies]
serial_test = "0.10.0"
snailquote = "0.3.1"
test_bin = "0.4.0"
